- add support for "nodiratime" mount option

Version 10.4.159 - 06 August 2007, by Thierry Vignaud

- diskdrake:
  o allow setting "flush" option (for vfat)
- drakbug: do not report "wizcancel" exceptions (#32308)

Version 10.4.157 - 03 August 2007, by Thierry Vignaud

- report real version on --help
- drakbug:
  o report version of drakbug
- list iwl3945/iwl4965 modules (and unlist ipw3945)
- logdrake:
  o display "save" & "quit" button when run from the control center

Version 10.4.156 - 02 August 2007, by Thierry Vignaud

- localedrake:
  o adapt configuration of consolefonts for kbd
- logdrake:
  o fix crash if /var/log/explanations doesn't exist (#32234)

Version 10.4.153 - 02 August 2007, by Thierry Vignaud

- drakbug:
  o ask people to report lspcidrake -v output rather than lspci since it's more
    usefull to us
  o display the program that actually crashed and the error message
  o do not fire on exceptions in eval { }
  o do not loop if drakbug crashes
  o put full backtrace on bugzilla, not only last call point

Version 10.4.152 - 01 August 2007, by Thierry Vignaud

- drakbug:
  o add --error option in order to provide a backtrace
  o fix crashing on unknown programs
  o fix passing several options
  o prefill description too and hint the reporter how to provide usefull data
- report ordinary crash (unhandled exceptions, not seg faults) on bugzilla too

Version 10.4.151 - 01 August 2007, by Thierry Vignaud

- bootloader-config: handle vmdefault and vmdisable lilo.conf options (#26456)
- diskdrake: drop "Rescue partition table" feature 
  (was based on rescuept which has been dropped in util-linux, but was quite
  bad compared to testdisk anyway)
- drakauth: fix bogus string (#10776)
- drakbug:
  o basic adaption to new bugzilla (#31995)
  o display Mandriva Online for mdkapplet in the "select mandriva
    tool" field
  o prefill default summary with the name of the actual program which crashed
- draksec: improve explanations (#6969)