@@ -1,4 +1,5 @@
 - add support for "nodiratime" mount option
+- drakxservices: describe a few more services (#18612)
 
 Version 10.4.159 - 06 August 2007, by Thierry Vignaud
 
